[package]
name = "kaim-app"
version = "0.1.0"
edition = "2021"


[dependencies]
kaim-types = {path = "../kaim-types"}

egui = "0.27.2"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }

[dependencies.eframe]
version = "0.27.2"
default-features = false
features = [
    "default_fonts",
    "glow",
    "persistence",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.42"


[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

